style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: sans-serif;
  line-height: 1.6;
  background: #fff;
  color: #333;
}

a {
  text-decoration: none;
  color: #333;
  font-weight: 500;
}

a:hover {
  color: #0077cc;
}

header {
  background: #fff;
  padding: 1rem 2rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: sticky;
  top: 0;
  z-index: 1000;
  /* border-bottom: 2px solid #333; */
  box-shadow: 0 2px 5px rgba(3,3,3,0.4);
}

.logo {
  font-size: 1.5rem;
  font-weight: bold;
}

.logo span {
  color: #555;
}

.btn {
  display: inline-block;
  background-color: #0077cc;
  color: #fff;
  padding: 0.4rem 0.6rem;
  border-radius: 8px;
  font-weight: 600;
  transition: background-color 0.3s ease;
  text-align: center;
}

.btn:hover {
  background-color: #005fa3;
  color: #eee;  
}

nav ul {
  list-style: none;
  display: flex;
  gap: 1.5rem;
}

nav a {
  text-decoration: none;
  color: #333;
  font-weight: 500;
}

nav a:hover {
  color: #0077cc;
}

.hamburger {
  display: none;
  font-size: 1.8rem;
  cursor: pointer;
}

main {
  padding: 2rem;
}

section {
  margin-bottom: 4rem;
}

h1 {
  margin-bottom: 1rem;
  font-weight: 900;
}

/* Responsive */
@media (max-width: 768px) {
  .nav-links {
    display: none;
    flex-direction: column;
    background: #fff;
    position: absolute;
    top: 60px;
    right: 20px;
    width: 200px;
    box-shadow: 0 2px 5px rgba(3,3,3,0.4);
    padding: 1rem;
  }

  .nav-links.active {
    display: flex;
  }

  .hamburger {
    display: block;
  }
}

